bk_ida/gccida/c2/emit_swap_insn
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1462:4: error: expected ';' after expression
rtx v25; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1462:5: error: use of undeclared identifier 'v25'
rtx v25; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1474:13: error: expected expression
v6 = ( rtx *)( FP_mode_reg + 136); 
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1495:33: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
|| ( v11 = ( unsigned __int16 *)current_block->head[1], v12 = ( rtx *)insn[1], v12 == ( rtx *)v11) ) 
                                ^~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1495:70: error: expected expression
|| ( v11 = ( unsigned __int16 *)current_block->head[1], v12 = ( rtx *)insn[1], v12 == ( rtx *)v11) ) 
                                                                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1547:27: error: expected ')'
rtx = single_set_2( ( rtx)v12, v12[4]); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1547:19: note: to match this '('
rtx = single_set_2( ( rtx)v12, v12[4]); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1554:14: error: expected expression
v12 = ( rtx *)v12[2]; 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1555:20: error: expected expression
if ( v12 != ( rtx *)v11 ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1580:38: error: use of undeclared identifier 'machine_mode'
v24 = subreg_regno_offset( v21[2], ( machine_mode)( unsigned __int8)BYTE2( *v21), v22, ( machine_mode)BYTE2( v20)); 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1580:53: error: expected expression
v24 = subreg_regno_offset( v21[2], ( machine_mode)( unsigned __int8)BYTE2( *v21), v22, ( machine_mode)BYTE2( v20)); 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1580:90: error: use of undeclared identifier 'machine_mode'
v24 = subreg_regno_offset( v21[2], ( machine_mode)( unsigned __int8)BYTE2( *v21), v22, ( machine_mode)BYTE2( v20)); 
                                                                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1589:1: error: use of undeclared identifier 'v25'
v25 = rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1600:15: error: expected expression
rtx = *( rtx *)( ( char *)&FP_mode_reg[rtwint[2] - 8][59 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1603:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1603:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1605:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v26))] 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1607:1: error: use of undeclared identifier 'v25'
v25->fld[0].rtwint = ( __int64)rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1614:30: error: expected ')'
if ( !find_regno_note( ( rtx)v12, REG_DEAD, 8u) ) 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1614:22: note: to match this '('
if ( !find_regno_note( ( rtx)v12, REG_DEAD, 8u) ) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1623:27: error: expected ')'
|| find_regno_note( ( rtx)v12, REG_DEAD, 8u) ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/reg-stack.c:1623:19: note: to match this '('
|| find_regno_note( ( rtx)v12, REG_DEAD, 8u) ) 
                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_swap_insn/src/obj/reg-stack.o] Error 1
